[gd_scene load_steps=2 format=3 uid="uid://bcw2442lg1ymu"]

[ext_resource type="Script" uid="uid://dg10yui44srth" path="res://main.gd" id="1"]

[node name="Main" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 285.0
offset_bottom = 48.0
text = "Available Benchmarks:"
vertical_alignment = 1

[node name="Tree" type="Tree" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 56.0
offset_right = -10.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
hide_root = true
metadata/_edit_layout_mode = 1

[node name="SelectAll" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -66.0
offset_right = 158.0
offset_bottom = -9.0
grow_vertical = 0
text = "Select All"
metadata/_edit_layout_mode = 1

[node name="SelectNone" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 184.0
offset_top = -66.0
offset_right = 365.0
offset_bottom = -9.0
grow_vertical = 0
text = "Select None"
metadata/_edit_layout_mode = 1

[node name="CopyJSON" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -542.0
offset_top = -66.0
offset_right = -224.0
offset_bottom = -9.0
grow_horizontal = 0
grow_vertical = 0
text = "Copy JSON to Clipboard"
metadata/_edit_layout_mode = 1

[node name="Run" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -182.0
offset_top = -66.0
offset_right = -11.0
offset_bottom = -9.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
disabled = true
text = "Run
"
metadata/_edit_layout_mode = 1

[connection signal="item_edited" from="Tree" to="." method="_on_Tree_item_edited"]
[connection signal="pressed" from="SelectAll" to="." method="_on_SelectAll_pressed"]
[connection signal="pressed" from="SelectNone" to="." method="_on_SelectNone_pressed"]
[connection signal="pressed" from="CopyJSON" to="." method="_on_CopyJSON_pressed"]
[connection signal="pressed" from="Run" to="." method="_on_Run_pressed"]
